[metadata]
name = anylog-api
version = 0.0.0
author = AnyLog Co.
contact = info@anylog.co
description = Tool for AnyLog / EdgeLake RESTfuls API
license = Copyright AnyLog Co.
site = https://anylog.network
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co/AnyLog-API

[bdist_wheel]
universal = 1
